--- a/index.html
+++ b/index.html
@@ -8,6 +8,30 @@
     <link rel="stylesheet" href="./CSS/estilo.css">
 </head>
 <body>
-    <h1>Hola</h1>
+    <nav class="navbar">
+        <label class="navbar-toggle" id="js-navbar-toggle" for="chkToggle">
+                <i class="fa fa-bars"></i>
+            </label>
+        <a href="#" class="logo">logo</a>
+        <input type="checkbox" id="chkToggle"></input>
+        <ul class="main-nav" id="js-menu">
+          <li>
+            <a href="#" class="nav-links">Home</a>
+          </li>
+          <li>
+            <a href="#" class="nav-links">Products</a>
+          </li>
+          <li>
+            <a href="#" class="nav-links">About Us</a>
+          </li>
+          <li>
+            <a href="#" class="nav-links">Contact Us</a>
+          </li>
+          <li>
+            <a href="#" class="nav-links">Blog</a>
+          </li>
+        </ul>
+      </nav>
+    
 </body>
 </html>
